compiler/tests/fail/register_allocation/too_many_args.jazz
export
fn too_many_args(reg u64 a b c d e f g) {}
